--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,24 @@
   <groupId>ru.whitegray</groupId>
   <artifactId>GB_SpringLessons</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>1.5.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>1.5.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.3.10.RELEASE</version>
+        </dependency>
+    </dependencies>
+    <packaging>war</packaging>
 
     <modules>
         <module>HomeWork1</module>
