--- a/HomeWork6/src/main/resources/application.properties
+++ b/HomeWork6/src/main/resources/application.properties
@@ -4,6 +4,13 @@ spring.datasource.username=root
 spring.datasource.password=rooTRoot7
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+
 spring.main.web-application-type=none
+#spring.datasource.url=jdbc:h2:mem:test
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
