--- a/HomeWork11/src/main/resources/application.properties
+++ b/HomeWork11/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/gb_springlessons_hw?serverTimezone=Europe/Moscow
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.username=root
 spring.datasource.password=rooTRoot7
 spring.jpa.show-sql=true
 spring.main.banner-mode=off
-#spring.main.web-application-type=servlet
-#spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.initialization-mode=always
+spring.main.web-application-type=servlet
+spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html             
+
